--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
--- Active: 1745877150301@@127.0.0.1@3306@e_learning
+-- Active: 1745934871033@@127.0.0.1@3306@learnify_db
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -163,7 +163,7 @@
         </p>
       </div>
       <div class="contact-form">
-        <form action="/submit.php" method="POST">
+        <form action="/submit.php" method="post">
           <label for="first_name">First Name</label>
           <input
             type="text"
